# cross-factory-tta

./: .gitignore  .venv  README.md  RESEARCH.md  config.py  data  dataset-links.md  hparams.yaml  hparams_yolo11m.yaml  hparams_yolov8m.yaml  main.py  pyproject.toml
configs/: tent_config.yaml  train_sh17.yaml
data/: datasets.md
data/prepared/chv/: chv.yaml
data/prepared/chv/labels/test/: ppe_0003.txt  ppe_0028.txt  ppe_0037.txt  ppe_0042.txt  ppe_0048.txt  ppe_0059.txt  ppe_0062.txt  ppe_0067.txt  ppe_0068.txt  ppe_0069.txt  (+123 more)
data/prepared/pictor_ppe/: pictor.yaml
data/prepared/shwd/: shwd.yaml
docs/: phase0_report.md  phase1_report.md  phase2_report.md  phase3_report.md  phase3b_handoff.md  plan.md  task.md
docs/visual_examples/: make_detection_failures.py  make_sample_grid.py
models/: runs.md
notebooks/: kaggle_all_in_one.ipynb  kaggle_remote_train.ipynb
notebooks/kaggle/: tta_experiment.ipynb
runs/results/grounding_dino_base/: baseline.json
runs/results/owlvit_large/: baseline.json
runs/results/sh17_yolov8m/: baseline.json  datta_s1.json  datta_s1_s2.json  datta_s2.json  dua.json  online_tent.json  sar.json  sweep_dua.json  sweep_eata.json  sweep_sar.json  sweep_tent_chv.json  sweep_tent_pictor_ppe.json  sweep_tent_shwd.json
runs/results/yolo_world_L/: baseline.json  conf_sweep.json
runs/train/sh17_yolo11m/: args.yaml
runs/train/sh17_yolov8m/: args.yaml  results.csv
scripts/: download_datasets.py  eval_baseline.py  eval_datta.py  eval_dua.py  eval_eata.py  eval_grounding_dino.py  eval_online_tent.py  eval_owlvit.py  eval_sar.py  eval_tent.py  eval_yolo_world.py  generate_summary.py  prepare_data.py  sweep_datta.py  sweep_dua.py  sweep_eata.py  sweep_sar.py  sweep_tent.py  sweep_yolo_world_conf.py  train.py
scripts/data/: convert_chv.py  convert_pictor.py  convert_shwd.py  download_datasets.py  prepare_data.py  verify_datasets.py
scripts/dev/: verify_pipeline.py
src/: adapt.py  cotta.py  data_setup.py  datta.py  download_data.py  dua.py  eata.py  eval.py  evaluate.py  hparams.py  prepare_data.py  sar.py  setup_data.py  tent.py  train.py
src/utils/: class_remap.py  metrics.py
(+1109 files in other folders)
