[project]
name = "cross-factory-tta"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3",
    "torch>=2.3",
    "torchvision>=0.18",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
