[project]
name = "cross-factory-tta"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3",
    "torch>=2.3,<2.11",
    "torchvision>=0.18",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
    "gdown>=5.1",
    "kagglehub>=0.3",
]

[dependency-groups]
dev = []

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
concurrent-downloads = 1

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
